<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.bike.seeke.view.activitys.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/content_passageiro" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.app.bike.seeke.view.activitys.ui.dashboard.HistoricoFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_historico" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.app.bike.seeke.view.activitys.ui.notifications.PerfilFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>